# university

./: .env.docker  .gitignore  CONTRIBUTING.md  README.md  docker-compose-override.yaml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  backup.sql  encryption_default_key_v1.key  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 496ee8f5f401_change_id_etudiant_int_to_varchar_50_.py  8ad93622a2f9_initial_migration.py  ed952a49db1c_change_id_etudiant_to_string.py
backend/app/: .env  crud.py  dependencies.py  depends.py  deps.py  encryption_services.py  exc.py  initial_data.py  main.py  middlewares.py  models.py  schemas.py  test_main.py
backend/app/Systéme_orientation_académique/: .gitkeep  README.md  api_runner.py  config.py  config.yaml  main.py  predict.py  requirements.txt  structure.md
backend/app/api/: deps.py  main.py
backend/app/background_tasks/: media.py
backend/app/core/: config.py  db.py  security.py  settings.py
backend/app/crud/: courses.py  departements.py  faculty.py  media.py  programs.py  students.py  teacher.py  university.py  users.py
backend/app/database/: config.py  db_utils.py  settings.py
backend/app/models/: enrollments.py  media.py  student_history.py  students.py  teachers.py  token.py  university.py  users.py
backend/app/routers/: courses.py  departements.py  faculties.py  login.py  main.py  media.py  programs.py  students.py  teachers.py  users.py  utils.py
backend/app/schemas/: enrollments.py  media.py  message.py  schemas.py  (+5 more)
backend/migrations/: env.py
(+97 files in other folders)
